[package]
name = "rt"
version = "0.1.4"
edition = "2021"

[dependencies]
argh = "0.1.10"
env_logger = "0.10.0"
log = "0.4.19"
phf = { version = "0.11.2", features = ["macros"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
